fix: fix badge spacing

--- a/src/components/_badges.css
+++ b/src/components/_badges.css
@@ -6,7 +6,7 @@
   font-weight: var(--font-weight-regular);
   color: var(--color);
   border: var(--border-thin) solid var(--color);
-  padding: var(--sapce-small);
+  padding: var(--space-small);
   text-transform: lowercase;
   width: max-content;
   max-width: max-content;
